erDiagram
    USERS ||--o{ ORDERS : places
    USERS ||--o{ CARTS : owns
    ORDERS ||--o{ ORDER_ITEMS : contains
    PRODUCTS ||--o{ PRODUCT_VARIANTS : has
    CARTS ||--o{ CART_ITEMS : contains
    PRODUCT_VARIANTS ||--o{ CART_ITEMS : referenced_by
    PRODUCT_VARIANTS ||--o{ ORDER_ITEMS : referenced_by

    USERS {
      integer id PK
      string username
      string email
      string role
    }
    PRODUCTS {
      integer id PK
      string name
      text description
      integer category_id FK
    }
    PRODUCT_VARIANTS {
      integer id PK
      integer product_id FK
      string sku
      decimal price
      integer stock
    }
    CARTS {
      integer id PK
      integer user_id FK
      timestamp created_at
    }
    CART_ITEMS {
      integer id PK
      integer cart_id FK
      integer variant_id FK
      integer quantity
    }
    ORDERS {
      integer id PK
      integer user_id FK
      decimal total
      string status
    }
    ORDER_ITEMS {
      integer id PK
      integer order_id FK
      integer variant_id FK
      integer quantity
      decimal price
    }
    WEBHOOK_EVENTS {
      integer id PK
      string event
      json payload
      boolean delivered
      integer attempts
    }
